Fixed spacing on site

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -120,7 +120,7 @@ h5 {
 }
 
 .screenshot {
-    width: 90%;
+    width: 95%;
     max-width: 800px;
     box-shadow: 0em 0em 1.5em rgba(0, 0, 0, 0.25);
 }
